--- a/telegram-despesas-bot/render.yaml
+++ b/telegram-despesas-bot/render.yaml
@@ -1,7 +1,9 @@
 services:
-  - type: worker
-    name: telegram-despesas-bot
+  - type: web
+    name: minhasdespesa
     runtime: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "python main.py"
-    autoDeploy: true
+    buildCommand: pip install -r requirements.txt
+    startCommand: python main.py
+    envVars:
+      - key: BOT_TOKEN
+        value: "7215000074:AAHbJH1V0vJsdLzCfeK4dMK-1el5qF-cPTQ"
